# acmecorp-hr-portal

./: .gitignore  README.md  TASK_BACKLOG.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  problem_statement.md  pyrightconfig.json  questions.md  run-dev.ps1  run-dev.sh
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pyrightconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260605_1432_b1cb3bc098ee_initial_migration.py  20260607_0821_5b5ab69c6a9a_add_hire_date.py
apps/api/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/api/app/repositories/: __init__.py  analytics_repository.py  employee_repository.py
apps/api/app/routers/: __init__.py  analytics.py  auth.py  employees.py  export.py
apps/api/app/services/: __init__.py  analytics_service.py  employee_service.py
apps/api/scripts/: benchmark.py  generators.py  seed.py
apps/api/tests/: conftest.py  test_analytics_endpoints.py  test_auth_endpoints.py  test_config.py  test_database.py  test_employee_endpoints.py  test_employee_filters.py  test_employee_service.py  test_export_endpoints.py  test_generators.py  test_health.py  test_models.py  test_schemas.py
apps/api/tests/unit/: test_analytics_logic_unit.py  test_employee_service_unit.py
apps/web/: .dockerignore  .env.example  .gitignore  .prettierignore  (+5 more)
docs/: AI_USAGE.md  ARCHITECTURE.md  Changes to be done.txt  DESIGN_NOTES.md  PERFORMANCE.md  PRD.md  PROBLEM_STATEMENT.md  README.md  REQUIREMENTS.md  TRADEOFFS.md
(+17 files in other folders)
